feat: started working on guilds_handler
